# vunkpunk-backend

./: LICENSE  README.md  pyproject.toml
.github/workflows/: check.yaml
vunkpunk/: manage.py
vunkpunk/images_manager/: apps.py  models.py  serializers.py  urls.py  views.py
vunkpunk/images_manager/migrations/: 0001_initial.py  0002_alter_salecardimage_photo.py
vunkpunk/vp_comments/: admin.py  apps.py  models.py  serializers.py  views.py
vunkpunk/vp_comments/migrations/: 0001_initial.py
vunkpunk/vp_forum/: admin.py  apps.py  models.py  serializers.py  views.py
vunkpunk/vp_forum/migrations/: 0001_initial.py  0002_salecard_description_alter_salecard_rating.py  0003_salecard_photo.py  0004_alter_salecard_photo.py  0005_salecard_dormitory.py  0006_salecard_contact_salecard_time_created.py  0007_alter_salecard_time_created.py  0008_remove_salecard_photo.py  0009_category_salecard_categories.py
vunkpunk/vp_users/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
vunkpunk/vp_users/migrations/: 0001_initial.py  0002_alter_user_dormitory_alter_user_faculty.py  0003_remove_user_patronymic_remove_user_surname_and_more.py  0004_alter_user_photo.py  0005_alter_user_photo.py  0006_alter_user_faculty.py  0007_user_activation_code_user_activation_code_expires_at.py
vunkpunk/vunkpunk/: asgi.py  settings.py  urls.py  wsgi.py
